--- a/style.css
+++ b/style.css
@@ -1,65 +1,125 @@
-body
+html, body
 {
 	background-color: #E6E8FA; /*kolor tla */
+	margin: 0;
+	padding: 0;
+	height: 100%;
 }
-#logo
-{
-	position: relative;
-	padding-bottom: 2px;
-	float: left;
-	height:5%;
-	width:5%;
+
+.banner {
+	background:#1E7C7E;
+	text-align: center;
+	padding:1%;
 }
-#logo > img 
+nav
 {
-	width:100%;
-}
-#menu
-{
+	text-align: center;
 	position:absolute;
-	top:20%;
+	background: aqua;
 	float:left;
-	padding-bottom: 20%;
-	heigtht: 1%;
 	width:100%;
+	text-decoration:none;
+	margin-top:2%;
+	margin-bottom:2%;
+}
+nav  ul{
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	vertical-align: middle;
+	text-decoration:none;
 	
 }
-#menu >table
-{
-	
+nav  li {
+	list-style:none;
+	display:block;
 	float:left;
-	padding-bottom: 20%;	
+	height:100%;
+	text-decoration:none;
+	text-decoration-line: none;
+		margin-left:8%;
+	vertical-align: middle;
 }
-#box_1
+.b_map {
+	margin-top:7%;
+	background:#1E7C7E;
+	text-align: center;
+	padding:1%;
+}
+.d-menu
 {
+	text-align: center;
 	position:absolute;
-	top: 25%;
+	background: aqua;
 	float:left;
-	background-color:red;
+	width:100%;
+	text-decoration:none;
+	margin-top:2%;
+	margin-bottom:2%;
+	bottom: 
 }
-#box_2
-{
-	position:absolute;
-	top:0;
+footer {
+	text-align: center;
+	padding-top:2%;
+	position: fixed;
 	bottom:0;
-	left:0;
-	rigth:0;
-	margin:auto;
-	
-	
-	
-}
-#box_3
-{
-	position:absolute;
-	top: 25%;
-	right:0;
-	background-color:red;
-}
-#stopka
-{
-	background-color: #236B8E;
-	position:absolute;
-	bottom:0;
 	width:100%;
+	height: 60px;
+	background: #236B8E;
+}
+section {
+	margin-top:7%;
+	float:left;
+	width:100%;
+	padding: 2% 2% 2% 2%;
+}
+
+aside {
+	background:#79B8FA;
+	float:left;
+	width:70%;
+	margin: 2,2,2,2;
+	
+	
+}
+
+article {
+	background:#79B8FA;
+	float:left;
+	width:30%;
+	
+}
+article > img {
+	max-width:100%;
+	max-height:100%;
+}
+
+.opis {
+	background:#79B8FA;
+	float:left;
+	width:70%;
+}
+
+.zdjecie_opis {
+	background:#79B8FA;
+	float:left;
+	width:30%;
+}
+.zdjecie_opis > img {
+	width:100%;
+	height:50%;
+
+}
+
+.galeria {
+	background:#79B8FA;
+	float:left;
+	margin-bottom:61px;
+	width:100%;
+}
+
+
+
+.a {
+	height:50px;
 }
